--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "dev": "live-server",
-    "build:tailwind": "tailwindcss build styles/global.css -o static/output.css"
+    "build:tailwind": "tailwindcss build styles/global.css -o static/output.css",
+    "build": "NODE_ENV=production npm run build:tailwind"
   },
   "author": "Victor Mustar <victor.mustar@gmail.com>",
   "license": "ISC",
